SCRUM-81(feat): Changing the response of getUserStoriesByPeriodoAndUse to return a 404 error when it is null